[build-system]
requires = ["setuptools>=45.0.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
preview = true
unstable = true
exclude = "src/zorg/grammar/"

[tool.isort]
# Setting the 'profile' to 'black' MAY override some of the settings below.
profile = "black"
skip = "src/zorg/grammar/"
combine_as_imports = true
force_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.pydocstyle]
match = '.*\.py'
match-dir = '(?!grammar).*'
select = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D412",
    "D414",
    "D416",
    "D417",
]
